2001-05-14  Tom Tromey  <tromey@redhat.com>

	* lib/ylwrap: Fixed quoting on regular expression.  Fixes
	yacc4.test.

	Fix for texinfo10.test.
	* tests/Makefile.am (XFAIL_TESTS): Remove texinfo10.test.
	* lib/am/texinfos.am: Use LOCAL-TEXIS liberally.
	* automake.in (handle_texinfo_helper): New sub.
	(handle_texinfo): Rewrote.  Now defines LOCAL-TEXIS.
	* tests/texinfo10.test: Added more cases.

	Fix for yaccvpath.test:
	* tests/Makefile.am (XFAIL_TESTS): Removed yaccvpath.test.
	* lib/am/distdir.am (distdir): Always look for file in build
	directory first.
	* lib/ylwrap: Quote the `#line' regular expression.
	* lib/am/yacc.am (%YACC_SUFFIX%%C_SUFFIX%): Reverted earlier
	change; don't run sed on the generated file.
	* tests/yaccvpath.test: Create new parser in srcdir.  Added test
	to make sure parser will be rebuilt at dist time.

2001-05-13  Pavel Roskin  <proski@gnu.org>

	* automake.in ($IGNORE_PATTERN): Allow spaces before comments
	beginning with `##'.
	* automake.texi (General Operation): Document it.

2001-05-13  Tom Tromey  <tromey@redhat.com>

	Reported by Rainer Orth:
	* lib/am/distdir.am (?DISTDIR?distdir): Define conditional on
	TOPDIR_P.
	* tests/Makefile.am (TESTS): Added distname.test.
	* tests/distname.test: New file.

	* Makefile.am (dist_pkgdata_DATA): Removed.

	* tests/defs: Find files to copy in lib/.
	* automake.in (perllibdir): Set to Automake directory.
	* ansi2knr.c, ansi2knr.1: Removed.
	* Makefile.am (dist_am_DATA): Removed.
	(amdir): Removed.
	(maintainer-check): Look for lib/am/*.am.  Expect 28 lines of
	diffs.
	(scriptdir): Removed.
	(dist_script_DATA): Likewise.
	(install-data-hook): Likewise.
	(installcheck-local): Likewise.
	(TAGS_FILES): Removed amfiles.
	(dist_pkgdata_DATA): Removed ansi2knr.c and ansi2knr.1.
	* tests/installsh.test (AUTOMAKE): Use --libdir, not --amdir, and
	point it to the right directory.
	* ansi2knr.am, check.am, clean-hdr.am, clean.am, comp-vars.am,
	compile.am, configure.am, data.am, dejagnu.am, depend.am,