@@ -55,6 +55,12 @@ test -z "$PERL" && PERL=perl
 # User can set MAKE to choose which make to use.  Must use GNU make.
 test -z "$MAKE" && MAKE=make
 
+if ($MAKE --version) > /dev/null 2>&1; then
+   needs_gnu_make=:
+else
+   needs_gnu_make='exit 77'
+fi
+
 # User can set which tools from Autoconf to use.
 test -z "$AUTOCONF" && AUTOCONF=autoconf
 if ($AUTOCONF --version) >/dev/null 2>&1; then
