@@ -5,11 +5,7 @@
 
 . $srcdir/defs || exit 1
 
-# This test relies on GNU make.
-$MAKE --version > /dev/null 2>&1 || {
-   # Nope.
-   exit 77
-}
+$needs_gnu_make
 
 cat >> configure.in << 'END'
 AC_PROG_CC
