@@ -15,6 +15,7 @@ END
 : > Makefile.am
 
 $needs_autoconf
+$needs_gnu_make
 
 set -e
 
