@@ -43,8 +43,7 @@ $needs_autoconf
 # Likewise for gcc.
 (gcc -v) > /dev/null 2>&1 || exit 77
 
-# Likewise for GNU make.
-($MAKE --version) > /dev/null 2>&1 || exit 77
+$needs_gnu_make
 
 set -e
 
