@@ -1,3 +1,11 @@
+2001-05-15  Tom Tromey  <tromey@redhat.com>
+
+	Fixes PR automake/175:
+	* tests/target-cflags.test: Use $needs_gnu_make.
+	* tests/exsource.test: Use $needs_gnu_make.
+	* tests/make.test: Require GNU make.
+	* tests/defs (needs_gnu_make): Compute.
+
 2001-05-14  Tom Tromey  <tromey@redhat.com>
 
 	* lib/ylwrap: Fixed quoting on regular expression.  Fixes
